1) center align the fixedNav content on large width.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -70,6 +70,7 @@ div#fixedNav {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-left: 180px;
 }
 
 div#fixedNav div#navContainer {
@@ -397,6 +398,9 @@ section#contact #contactList p a:nth-child(2):hover {
   main {
     margin-top: 0px;
     padding-left: 0;
+  }
+  div#fixedNav {
+    padding-left: 0px;
   }
 }
 
